tests/NormalTests/paczka2/big_fuzzy/17605050.err
Error in line 1: DBBMCIA31 S145 2,1
Error in line 7: ckWpXwN68 S260 24,8
Error in line 10: ckWpXwN68 S947 61,5
Error in line 14: ckWpXwN68 S260 39,1
Error in line 15: nokm3DAkO S145 195,9
Error in line 27: S145 S947 68,0
Error in line 33: S145 S145 65,6
Error in line 37: nokm$DAkO S947 $9,8
Error in line 36: nokm3DAkO A278 59,2
Error in line 42: ckWpXwN68 S145 98,4
Error in line 54: DBBMC½A31 S145 11,6
Error in line 53: DBBMCIA31 S145 4,2
Error in line 56: 9H3E A278 93,9
Error in line 62: nokm3DAkO A278 15,3
Error in line 65: nokm3DAkO S260 37,5
Error in line 71: rwFm3Xkv A278 33,9
Error in line 83: rwFm3Xkv S260 13,6
Error in line 86: nokm3DAkO A278 {{,2
Error in line 75: nokm3DAkO A278 19,8
Error in line 112: ckW^XwN68 S145 186,2
Error in line 105: DBBMCIA31 A278 447,9
Error in line 120: rwFm3Xkv A278 39Â9
Error in line 113: 9H3E A278 59,1
Error in line 131: nokm3DAkO S260 0,7
Error in line 143: PFhK S260 54,0
Error in line 147: rwFm3Xkv S947 25,6
Error in line 153: S145 S947 40,0
Error in line 150: rwFm3Xkv A278 78,6
Error in line 160: PFhK S947 1,8
Error in line 159: rwFm3Xkv S145 67,3
Error in line 164: rwFm3Xkv S947 7,8
Error in line 163: PFhK S260 63,2
Error in line 130: ckWpXwN68 S145 81,1
Error in line 162: DBBMCIA31 A278 71,1
Error in line 171: DBBMCIA31 S947 8,4
Error in line 170: ckWpXwN68 S947 8,2
Error in line 172: DBBMCIA31 S260 40,7
Error in line 179: rwFm3Xkv A278 11,Y
Error in line 177: rwFm3Xkv S145 22,2
Error in line 183: DBBMCIA31 S145 119,49
Error in line 181: rwFm3Xkv A278 54,3
Error in line 189: S145 A278 7,1
Error in line 191: S145 S947 52,7
Error in line 187: rwFm3Xkv S260 80,3
Error in line 174: DBBMCIA31 S145 76,4
Error in line 203: rwFm3Xkv S145 62,0
Error in line 238: PFhK S260 78,44
Error in line 237: 9H3E S145 81,3
Error in line 245: PFhK S947 21,7
